# ETL-SINASC

./: .env_example  .gitignore  README.md  __main__.py  input.yaml  main.py  pyproject.toml  setup.py
docs/: params.md
docs/transformations/: RACACOR.ipynb
etl/: __init__.py  __main__.py  utils.py
etl/extraction/: extract.py  utils.py
etl/loader/: load.py  utils.py
etl/src/extraction/: extract.py  utils.py
etl/src/transformation/: transform.py  utils.py
etl/src/transformation/year_specific/: __init__.py  yearHandler.py  year_2012.py  year_2013.py  year_2014.py  year_2015.py  year_2016.py  year_2017.py  year_2018.py  year_2019.py  year_2020.py  year_2021.py  year_2022.py  year_2023.py
etl/transformation/: general_changes.py  transform.py  utils.py
etl/transformation/handlers/: __init__.py  main_handler.py  time_handler.py
etl/transformation/year_specific/: __init__.py  utils.py  yearHandler.py  year_2012.py  year_2013.py  year_2014.py  year_2015.py  year_2016.py  year_2017.py  year_2018.py  year_2019.py  year_2020.py  year_2021.py  year_2022.py  year_2023.py
etl/transformation/years/: DN2012.py  DN2013.py  DN2014.py  DN2015.py  DN2016.py  DN2017.py  DN2018.py  DN2019.py  DN2020.py  DN2021.py  DN2022.py  DN2023.py  __init__.py  defaultHandler.py
parameters/: extract_urls.json  params.json
test/: test_structure.py  verifier.py
