[project]
name = "ETL-SINASC"
version = "0.1.0"
description = ""
authors = [
    {name = "LordRiccard",email = "106322393+LordRiccard@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
